Prevent line breaks in directional text

--- a/plugins/fhpe/fhpe.css
+++ b/plugins/fhpe/fhpe.css
@@ -3,6 +3,7 @@
 	unicode-bidi: bidi-override;
 	direction: rtl;
 	display: inline-block;
+	white-space: nowrap;  /* Prevent line break */
 }
 
 .fhpe:after {
